# issue-zig

./: .gitignore  BUILD.bazel  MODULE.bazel  bazel-issue-zig  issue.md  update_zig_index.sh  zig_index.json
zig-src/: repro_simple.zig
